# diolog-plugins

./: .gitignore  README.md
.claude-plugin/: marketplace.json
plugins/acceptance-e2e/: README.md
plugins/bench-qa/: README.md
plugins/code-review/: README.md
plugins/create-amy-content/: README.md
plugins/create-diolog-content/: README.md
plugins/create-diolog-guides/: README.md
plugins/create-diolog-infographic/: README.md
plugins/create-luke-article/: README.md
plugins/create-luke-content/: README.md
plugins/create-persona/: README.md
plugins/create-storyboard/: README.md
plugins/create-voice-persona/: README.md
plugins/customer-business-case/: README.md
plugins/customer-deck-builder/: README.md
plugins/deep-research-prompt-creator/: README.md
plugins/design-craft/: README.md
plugins/design-md-from-screenshots/: README.md
plugins/design-md-from-website/: README.md
plugins/diolog-brand-voice/: README.md
plugins/diolog-tasks-pipeline/: README.md
plugins/discovery-sentinel/: README.md
plugins/doc-summarizer/: README.md
plugins/email-mockups/: README.md
plugins/feature-spec-pipeline/: README.md
plugins/improve-prompt/: README.md
plugins/lecturn-deck/: README.md
plugins/lecturn-deck/converter/: README.md  pyproject.toml
plugins/lecturn-deck/converter/src/deckconv/: __init__.py  cli.py  frompptx.py  ooxml.py  topptx.py  validate.py
plugins/lecturn-deck/converter/tests/: test_roundtrip.py
plugins/linear-issue-pipeline/: README.md
plugins/mac-design-digest/: README.md
plugins/mac-design-studio/: README.md
(+487 files in other folders)
